# speclock

./: .aider.conf.yml  .gitignore  .mcp.json  AGENTS.md  BADGES.md  DISTRIBUTION.md  FEATURES.md  GEMINI.md  LAUNCH-POSTS.md  LICENSE  Procfile  README.md  SPECLOCK-INSTRUCTIONS.md  VIRAL-KIT.md  blog-devto-speclock.md  design-partners.md  devto-article.md  devto-publish.html  engagement-opportunities.md  llms-full.txt  llms.txt  manifest.json  mcpservers-submit.html  new-channels.md  new-directories.md  package-lock.json  package.json  reddit-vibecoding.html  server.js  server.json  speclock-replies.html  syndication-channels.md
.flowkeeper/: brain.json
.github/: copilot-instructions.md
docs/: SIGNING.md  badge.html  demo.html  faq.html  index.html  og-image.html  robots.txt  sitemap.xml  speclock.txt  the-rule-that-wasnt-enforced.html  vs.html
ide/: package-lock.json  package.json
scripts/: analytics.js  tracker.js
speclock-ros2/: .gitignore  package.xml  setup.py
speclock-ros2/config/: constraints.yaml
speclock-ros2/launch/: speclock_launch.py
speclock-ros2/speclock_ros2/: __init__.py  guardian_node.py  monitor_node.py
speclock-ros2/test/: test_guardian.py
src/: cli.js  engine.js  git.js  storage.js
tests/: audit-chain.test.js  auth-crypto.test.js  badge.test.mjs  claude-test-debug.mjs  compliance-export.test.js  g-suite-debug.mjs  g2-cross-lock-debug.mjs  gemini-hybrid-test.mjs  guardian.test.js  john-vibecoder-journey.test.js  mcp-install.test.mjs  phase4.test.js  pre-publish-gate.mjs  railway-g-suite-live.mjs  real-world-testers.test.js  (+6 more)
(+80 files in other folders)
