<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speclock_ros2</name>
  <version>5.0.0</version>
  <description>
    SpecLock ROS2 — AI Constraint Engine for Robot Safety.
    Real-time constraint enforcement for autonomous systems.
    Monitors robot topics, enforces safety limits, blocks forbidden
    state transitions, and triggers emergency stops on violations.
  </description>
  <maintainer email="sgroy10@gmail.com">Sandeep Roy</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
